k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rj-edge-telemetry
  namespace: rj-edge
  labels:
    app: rj-edge-telemetry
spec:
  selector:
    app: rj-edge-telemetry
  ports:
    - name: http
      port: 8000
      targetPort: http
  type: ClusterIP
